--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="workouts_page">Workouts</string>
     <string name="back_button">Back</string>
     <string name="change_timer">Change Timer</string>
+    <string name="timer_default">0.00 seconds</string>
+    <string name="timer_toggle_start">Start</string>
+    <string name="timer_toggle_stop">Stop</string>
+    <string name="timer_toggle_lap">Lap</string>
+    <string name="timer_toggle_clear">Clear</string>
 </resources>
