Added basic calorie tracker to count workouts Replaced anonymous runnable with lambda in TimerNumerical (optimisation) Removed un-needed auto generated files Improved uniformity in layout Converted classes to primitives where possible (optimisation)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,8 @@
     <string name="pint">pint</string>
     <string name="custom_amount">ml?</string>
     <string name="confirm">Submit</string>
+    <string name="workouts_default">Okcal burned</string>
+    <string name="custom_weight">Approx weight in KG?</string>
+    <string name="custom_met">Approx MET of activity?</string>
+    <string name="custom_minutes">Time spent in Minutes?</string>
 </resources>
